--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='utf-8'?>
 <resources>
-    <string name="app_name">EfectivioApp</string>
-    <string name="title_activity_main">EfectivioApp</string>
-    <string name="package_name">com.efectivio.app</string>
-    <string name="custom_url_scheme">com.efectivio.app</string>
+    <string name="app_name">Budget Tracker</string>
+    <string name="title_activity_main">Budget Tracker</string>
+    <string name="package_name">io.ionic.budgettracker</string>
+    <string name="custom_url_scheme">io.ionic.budgettracker</string>
 </resources>
